# ansible

./: README.md  ansible.cfg  neofetch.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-devcontainer.yaml
collections/: requirements.yml
collections/ansible_collections/sysengquick/proxmox/: CHANGELOG.md  README.md  galaxy.yml
collections/ansible_collections/sysengquick/proxmox/playbooks/: create_cloud_vm.yml
collections/ansible_collections/sysengquick/proxmox/plugins/filter/: checksum.yml  checksum2.txt  disk_config.yml  filters.py  network_config.yml  qcow2_image_name.yml
collections/ansible_collections/sysengquick/proxmox/plugins/lookup/: cloud_image.py  cloud_image.yml
collections/ansible_collections/sysengquick/proxmox/plugins/lookup/data/: cloud_images.yaml
collections/ansible_collections/sysengquick/proxmox/roles/api/defaults/: main.yml
collections/ansible_collections/sysengquick/tutorial/: CHANGELOG.md  README.md  galaxy.yml
collections/ansible_collections/sysengquick/tutorial/meta/: runtime.yml
collections/ansible_collections/sysengquick/tutorial/playbooks/: create_pve_host.yml  facts.yml  gitconfig.yml  jinja.yml  neofetch.yml  non_root_setup.yml  ping.yml  proxmox.yml  setup_router.yml  setup_vault.yml  vault_test.yml
collections/ansible_collections/sysengquick/tutorial/playbooks/files/: jinja.json
collections/ansible_collections/sysengquick/tutorial/plugins/modules/: user_info.py  user_info.yml
inventory/: ath.yaml  proxmox.yaml
vars/proxmox/: api.yaml
(+51 files in other folders)
