[tool.poetry]
name = "ansible-tutorial-2024"
version = "0.1.0"
description = ""
authors = ["John Ratliff <john@technoplaza.net>"]
license = "GPL-3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ansible-core = "~=2.16.6"
ansible-lint = { version = "^24.2.2", markers = 'platform_system != "Windows"' }
jmespath = "^1.0.1"
proxmoxer = "^2.0.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
