[tool.poetry]
name = "ansible-tutorial-2024"
version = "0.1.0"
description = ""
authors = ["John Ratliff <john@technoplaza.net>"]
license = "GPL-3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

ansible-core = "<2.17.0"
hvac = "^2.2.0"
jmespath = "^1.0.1"
proxmoxer = "^2.0.1"
pydantic = "^2.7.1"
requests = "^2.32.2"

[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "^24.5.0", markers = 'platform_system != "Windows"' }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
